small refactor to make dto field name match external server response field name